updated formula in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <article data-timings="">
     <p>The formula used for calculating the BMI in the US system is:</p>
 
-<p>\[BMI = \frac{{weight~in~pounds} \times 703}{(height~in~inches)^2}\]</p>
+<p>\[BMI = \frac{weight~in~pounds} \times 703}{(height~in~inches)^2}\]</p>
 
   </article>
   <!-- Presenter Notes -->
